--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,14 +5,14 @@ orbs:aws-cli: circleci/aws-cli@2.0.3
   # welcome: circleci/welcome-orb@0.4.1
   # aws-cli: circleci/aws-cli@2.0.3
 # Define the jobs we want to run for this project
-jobs:
-  myjob1:  # Choose any name, such as `build`
+#jobs:
+ # myjob1:  # Choose any name, such as `build`
       # The primary container, where your job's commands will run
-      docker:
-        - image: circleci/image::stable
-      steps:
-        - checkout # check out the code in the project directory
-        - run: echo "hello world" # run the `echo` command
+  #    docker:
+   #     - image: circleci/image::stable
+    #  steps:
+     #   - checkout # check out the code in the project directory
+      #  - run: echo "hello world" # run the `echo` command
   create_infrastructure: 
         docker:
           - image: amazon/aws-cli
@@ -30,5 +30,4 @@ workflows:
   # Name the workflow
   myWorkflow:
     jobs:
-      - myjob1
-      - create_infrastructure
+     - create_infrastructure
